# postgresql-simple-migration

./: .gitignore  .travis.yml  Changelog.markdown  License  Readme.markdown  postgresql-simple-migration.cabal  stack.yaml
app/: Main.hs
share/test/: script.sql
share/test/scripts/: 1.sql
src/: Main.hs
src/Database/PostgreSQL/Simple/: Migration.hs  Parser.hs  Util.hs
src/Database/PostgreSQL/Simple/Internal/: Util.hs
test/: Main.hs
test/Database/PostgreSQL/Simple/: MigrationTest.hs  ParserTest.hs
