name:                       postgresql-simple-migration
version:                    0.1.15.0
synopsis:                   PostgreSQL Schema Migrations
homepage:                   https://github.com/ameingast/postgresql-simple-migration
Bug-reports:                https://github.com/ameingast/postgresql-simple-migration/issues
license:                    BSD3
license-file:               License
author:                     Andreas Meingast <ameingast@gmail.com>
maintainer:                 Andreas Meingast <ameingast@gmail.com>
copyright:                  2014-2016, Andreas Meingast
category:                   Database
build-type:                 Simple
cabal-version:              >= 1.10
description:                A PostgreSQL-simple schema migration utility

extra-source-files:         License
                            Readme.markdown
                            Changelog.markdown

                            src/*.hs
                            src/Database/PostgreSQL/Simple/*.hs

                            test/*.hs
                            test/Database/PostgreSQL/Simple/*.hs

                            share/test/*.sql
                            share/test/scripts/*.sql

source-repository head
    type:                   git
    location:               git://github.com/ameingast/postgresql-simple-migration

Library
    exposed-modules:        Database.PostgreSQL.Simple.Migration
                            Database.PostgreSQL.Simple.Util
    hs-source-dirs:         src
    ghc-options:            -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    default-extensions:     OverloadedStrings, CPP, LambdaCase
    default-language:       Haskell2010
    build-depends:          base                        >= 4.6      && < 5.0,
                            base64-bytestring           >= 1.0      && < 1.1,
                            bytestring                  >= 0.10     && < 0.11,
                            cryptohash                  >= 0.11     && < 0.12,
                            directory                   >= 1.2      && < 1.4,
                            postgresql-simple           >= 0.4      && < 0.7,
                            time                        >= 1.4      && < 1.10

Executable migrate
    main-is:                Main.hs
    hs-source-dirs:         src
    ghc-options:            -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    default-extensions:     OverloadedStrings, CPP, LambdaCase
    default-language:       Haskell2010
    build-depends:          base                        >= 4.6      && < 5.0,
                            base64-bytestring           >= 1.0      && < 1.1,
                            bytestring                  >= 0.10     && < 0.11,
                            cryptohash                  >= 0.11     && < 0.12,
                            directory                   >= 1.2      && < 1.4,
                            postgresql-simple           >= 0.4      && < 0.7,
                            time                        >= 1.4      && < 1.10,
                            text                        >= 1.2      && < 1.3

test-suite tests
    main-is:                Main.hs
    hs-source-dirs:         test
    other-modules:          Database.PostgreSQL.Simple.MigrationTest
    ghc-options:            -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns
    default-extensions:     OverloadedStrings, CPP, LambdaCase
    default-language:       Haskell2010
    type:                   exitcode-stdio-1.0
    build-depends:          base                        >= 4.6      && < 5.0,
                            bytestring                  >= 0.10     && < 0.11,
                            postgresql-simple           >= 0.4      && < 0.7,
                            hspec                       >= 2.2      && < 2.8,
                            postgresql-simple-migration
